--- a/tribe_nets.html
+++ b/tribe_nets.html
@@ -63,11 +63,11 @@
 
                 <h2>Comparing Structures Across Tribes</h2>
 
-                <p>Next, we can look at one specific tribe in Mafraq named the Bani Hassan, one of Jordan's largest tribes. The network diagram displays an intricate view of the Bani Hassan, with its two many sections, Thabta and Hiayyil, breaking off into a variety of branches and sub-branches.</p>
+                <p>Next, we can look at one specific tribe in Mafraq named the Bani Hassan, one of Jordan's largest tribes. The network diagram displays an intricate view of the Bani Hassan, with its two main sections, Thabta and Hiayyil, breaking off into a variety of branches and sub-branches.</p>
 
                 <iframe src="tribe_networks/bh_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
 
-                We can contrast this structure with that of the Sardiyya tribe, another large tribe in northern Jordan. There is a clear difference in structure, in which the Sardiyya tribe features a number of branches, but now lower levels of division such as those in Bani Hassan. This comparison shows the diversity of such family units in Jordan, even for those within the same region of the country. 
+                We can contrast this structure with that of the Sardiyya tribe, another large tribe in northern Jordan. There is a clear difference in structure, in which the Sardiyya tribe features a number of branches, but not lower levels of division such as those present in Bani Hassan. This comparison shows the diversity of such family units in Jordan, even for those within the same region of the country. 
 
                 <iframe src="tribe_networks/sard_net.html" width="100%" height="700px" frameborder="20px" style="margin-bottom: 40px; margin-top: 40px;"></iframe>
             </div>
