--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                     
                     <p>Since elections were reintroduced to Jordan in the 1990s, there have been a series of electoral reforms governing 
                         attributes of electoral districts themselves such as their size and geographic boundaries in addition to changes to the electoral process itself.
-                        One of the most significant changes was the switch to a single-non-transferrable vote (SNTV) sytem, or the so-called "one man one vote" system in which 
+                        One of the most significant changes was the switch to a single-non-transferrable vote (SNTV) system, or the so-called "one man one vote" system in which 
                         voters in multimember districts could only select one candidate on their ballots. This reform was deeply unpopular with the Islamic Action Front (IAF), Jordan's main opposition party, 
                         which boycotted several parliamentary elections in response to the new rules. In addition, it was criticized by various commentators as a system that would discourage the formation
                         of political parties and allow tribal elites to capture these electoral districts through existing networks of patronage.
