updated bio again

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                 <p class="bottom-test">
                     My dissertation research asks several questions about how power is created, maintained, and used in Jordan, particularly within the context of water distribution in Jordan. The core of my research examine how decentralization reforms in the irrigation water sector impacted access to irrigation water in the Jordan Valley. I bring previous social science literature on the impact of decentralization in conversation with work on other factors influencing public goods provision - particularly work on ethnicity and identity. In doing so, I ask how decentralization and local social networks interact with one another to facilitate or hinder patronage and corruption. In doing this work, I have collaborated with experts across a broad range of specialization, such as engineering, resource management, and climate change adaptation. Methodologically, my work incorporates modern approaches such as machine learning and remote sensing to collect data that is otherwise difficult to access. These methods are especially useful in constructing two key empirical elements of my dissertation - agricultural production estimations and demographic measurements.</p>
 
+                    <p>When I'm not doing PhD-related stuff, I enjoy getting out in nature, going on camping trips, trying new foods, and driving around the country with my friends to watch King Gizzard and the Lizard Wizard. Look out for me on the job market next year (please).</p>
+
                    <p>You can click <a href="tribe_nets.html">here</a> an interactive view of some of my research on tribal dynamics in Jordan.</p>
 
                     
